--- a/MyClock/ClockPage.xaml
+++ b/MyClock/ClockPage.xaml
@@ -53,5 +53,10 @@
                 </FormattedString>
             </Label.FormattedText>
         </Label>
+        <StackLayout Orientation="Horizontal" Margin="50, 30, 50, 30">
+            <Label Text="整点报时" />
+            <Switch x:Name="onTheHourToggle" HorizontalOptions="EndAndExpand"
+                    IsToggled="True" />
+        </StackLayout>
     </StackLayout>
 </ContentPage>
