--- a/MyClock/AlarmPage.xaml
+++ b/MyClock/AlarmPage.xaml
@@ -2,20 +2,26 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyClock.AlarmPage"
-             Title="Alarm">
+             Title="闹钟">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="+"
+                     IconImageSource="add.png"
                      Clicked="OnAlarmItemAddClicked" />
     </ContentPage.ToolbarItems>
 
-    <ListView x:Name="alarmListView"
-              Margin="20"
+    <StackLayout Margin="20">
+        <Button Text="添加"
+                Clicked="OnAlarmItemAddClicked" />
+        <ListView x:Name="alarmListView"
               ItemSelected="OnAlarmItemSelected">
-        <ListView.ItemTemplate>
-            <DataTemplate>
-                <TextCell Text="{Binding TimeString}"
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding TimeString}"
                           Detail="{Binding Note}"/>
-            </DataTemplate>
-        </ListView.ItemTemplate>
-    </ListView>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </StackLayout>
+
+
 </ContentPage>
