--- a/MyClock/ClockPage.xaml
+++ b/MyClock/ClockPage.xaml
@@ -55,7 +55,7 @@
                 </FormattedString>
             </Label.FormattedText>
         </Label>
-        <StackLayout Orientation="Vertical" Margin="50, 30, 50, 30">
+        <StackLayout Orientation="Horizontal" Margin="50, 30, 50, 30">
             <Label Text="整点报时"
                    HorizontalOptions="CenterAndExpand" />
             <Switch x:Name="onTheHourToggle" HorizontalOptions="CenterAndExpand"
